--- a/HTML and CSS/Introduction to HTML and CSS/02_Fruits/fruits.html
+++ b/HTML and CSS/Introduction to HTML and CSS/02_Fruits/fruits.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Fruits
-        </title>
-    </head>
-    <body>
-        <h1>
-            Fruits
-        </h1>
-        <p>
 
-        </p>
-        <p>
-            
-        </p>
-    </body>
+<head>
+    <title>
+        Fruits
+    </title>
+</head>
+
+<body>
+    <h1>
+        Fruits
+    </h1>
+    <p>
+        <img src="image/banana.png" />
+        <img src="image/orange.png" />
+        <img src="image/kiwi.png" />
+        <img src="image/kiwi.png" />
+        <img src="image/apple.png" />
+    </p>
+    <p>
+        <img src="image/apple.png" />
+        <img src="image/apple.png" />
+        <img src="image/banana.png" />
+        <img src="image/kiwi.png" />
+        <img src="image/orange.png" />
+    </p>
+    <p>
+        <img src="image/orange.png" />
+        <img src="image/banana.png" />
+        <img src="image/orange.png" />
+        <img src="image/orange.png" />
+        <img src="image/apple.png" />
+    </p>
+</body>
+
 </html>
