Saving the changes

--- a/HTML and CSS/Position and Grid/04_Navigation-float/index.html
+++ b/HTML and CSS/Position and Grid/04_Navigation-float/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Navigation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="mainHeader">
+        <p>Site title</p>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Blog</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
